--- a/GDCWeb/index.html
+++ b/GDCWeb/index.html
@@ -23,12 +23,12 @@
     TOTAL_MEMORY: 268435456,
     errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
     compatibilitycheck: null,
-    dataUrl: "Development/GDCWeb.data",
-    codeUrl: "Development/GDCWeb.js",
-    memUrl: "Development/GDCWeb.mem",
+    dataUrl: "Release/GDCWeb.data",
+    codeUrl: "Release/GDCWeb.js",
+    memUrl: "Release/GDCWeb.mem",
   };
 </script>
-<script src="Development/UnityLoader.js"></script>
+<script src="Release/UnityLoader.js"></script>
 
   </body>
 </html>
